force-app/main/default/objects/Proper_Batch_Operation__c/Proper_Batch_Operation__c.object-meta.xml
<CustomObject>
    <label>Proper Batch Operation</label>
    <nameField>
        <displayFormat>PBOC-{00000}</displayFormat>
        <label>Proper Batch Operation Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proper Batch Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>