force-app/main/default/objects/Proper_Batch_Operation__c/fields/Batch_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_File_Name__c</fullName>
    <label>Batch File Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>