force-app/main/default/objects/Proper_Batch_Operation__c/fields/Key_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Key_Field_Name__c</fullName>
    <label>Key Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>