force-app/main/default/objects/Proper_Batch_Operation__c/fields/Separator__c.field-meta.xml
<CustomField>
    <fullName>Separator__c</fullName>
    <label>Separator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>|</fullName>
            </value>
            <value>
                <fullName>#</fullName>
            </value>
            <value>
                <fullName>^</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>