force-app/main/default/objects/Proper_Batch_Operation__c/fields/Total_Child_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Child_Records__c</fullName>
    <formula>Total_Records__c -  Total_Parent_Records__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Child Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>