force-app/main/default/objects/Proper_Batch_Operation__c/fields/Total_Error_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Error_Records__c</fullName>
    <label>Total Error Records</label>
    <summaryFilterItems>
        <field>Proper_Batch_Operation_Result__c.Result__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </summaryFilterItems>
    <summaryForeignKey>Proper_Batch_Operation_Result__c.Batch_Operation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>