force-app/main/default/objects/Proper_Batch_Operation__c/fields/Total_Parent_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Parent_Records__c</fullName>
    <label>Total Parent Records</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>