force-app/main/default/objects/Proper_Batch_Operation__c/fields/Total_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Records__c</fullName>
    <label>Total Records</label>
    <summaryForeignKey>Proper_Batch_Operation_Result__c.Batch_Operation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>