force-app/main/default/objects/Proper_Batch_Operation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Batch_File_Name__c</columns>
    <columns>Master_Object_Name__c</columns>
    <columns>Operation__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>